# azure-sdk-for-python

./: agents.md
.chronus/: config.yaml
.github/: copilot-instructions.md
.github/chatmodes/: generation_agent.chatmode.md  typespec_generation.chatmode.md
.github/prompts/: plan-resourceIdRefactor.prompt.md
doc/dev/: packaging.md
doc/dev/ai/: typespec_generation.md
doc/dev/mgmt/: azure-mgmt-unified-design.md
eng/: useless_disablescript.py
eng/common/scripts/stress-testing/: stress-test-deployment-lib.ps1
scripts/pylint_custom_plugin/: pylint_guidelines_checker.py
sdk/confidentialledger/azure-codetransparency/: CHANGELOG.md  README.md
sdk/confidentialledger/azure-codetransparency/generated_samples/: create_entry.py  get_entry.py  get_entry_statement.py  (+3 more)
sdk/crud/: ci.yml
sdk/crud/azure-mgmt-crud/: MANIFEST.in  dev_requirements.txt  sdk_packaging.toml  setup.py
sdk/eventgrid/azure-eventgrid/: CHANGELOG.md  mypy.ini  pyproject.toml  tsp-location.yaml
sdk/eventgrid/azure-eventgrid-system-events/: README.md  tsp-location.yaml
sdk/mgmt-unified/azure-mgmt-unified/: README.md  pyproject.toml  setup.py
sdk/mgmt-unified/azure-mgmt-unified/azure/mgmt/unified/: __init__.py  _api_versions.py  _client.py  _enums.py  _models.py  _operations.py  _service_registry.py  _version.py
sdk/mgmt-unified/azure-mgmt-unified/examples/: basic_usage.py
sdk/mgmt-unified/azure-mgmt-unified/tests/: test_basic.py
sdk/mgmt/azure-mgmt-all/: API_COMPATIBILITY.md  README.md  pyproject.toml
sdk/servicebus/azure-servicebus/: CHANGELOG.md
tools/azure-sdk-tools/ci_tools/: functions.py
(+1100 files in other folders)
